--- a/TerminalBoard.App/TerminalBoard.App.csproj
+++ b/TerminalBoard.App/TerminalBoard.App.csproj
@@ -2,12 +2,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net8.0-windows</TargetFramework>
+    <TargetFramework>net8.0-windows8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Caliburn.Micro" Version="4.0.212" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TerminalBoard.Core\TerminalBoard.Core.csproj" />
   </ItemGroup>
 </Project>
