Terminal and Function Factories
The dawn of factories are here.

--- a/TerminalBoard.App/TerminalBoard.App.csproj
+++ b/TerminalBoard.App/TerminalBoard.App.csproj
@@ -12,5 +12,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TerminalBoard.Core\TerminalBoard.Core.csproj" />
+    <ProjectReference Include="..\TerminalBoard.Math\TerminalBoard.Math.csproj" />
   </ItemGroup>
 </Project>
